frontend-and-poll-managment/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poll-manager
  template:
    metadata:
      labels:
        app: poll-manager
    spec:
      containers:
      - name: poll-manager
        image: ghcr.io/sympoll/poll-management-service/sympoll-poll-service:latest
        resources:
        ports:
        - containerPort: 8081
