frontend-and-poll-managment/console-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console
spec:
  selector:
    matchLabels:
      app: console
  template:
    metadata:
      labels:
        app: console
    spec:
      containers:
      - name: console
        image: quay.io/brochwer/console
        resources:
        ports:
        - containerPort: 9999
