frontend-and-poll-managment/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/sympoll/front-end-service/sympoll-front-end-test:latest
          resources:
          ports:
            - containerPort: 8080
