frontend-and-poll-managment/poll-manager-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poll-manager
  template:
    metadata:
      labels:
        app: poll-manager
    spec:
      containers:
      - name: poll-manager
        image: ghcr.io/sympoll/poll-management-service/sympoll-poll-service:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8082
