frontend-and-poll-managment/api-gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
  - protocol: TCP
    port: 8081
  type: ClusterIP
