frontend-and-poll-managment/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: poll-manager
spec:
  selector:
    app: poll-manager
  ports:
  - protocol: TCP
    port: 8081
  type: ClusterIP
