frontend-and-poll-managment/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - protocol: TCP
      port: 8080
  selector:
    app: frontend
  type: ClusterIP
