frontend-and-poll-managment/poll-manager-service.yml
apiVersion: v1
kind: Service
metadata:
  name: poll-manager
spec:
  selector:
    app: poll-manager
  ports:
  - protocol: TCP
    port: 8082
  type: ClusterIP
